# sdl2_dx12

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindD3D12.cmake
res/: CMakeLists.txt  rt_shader.hlsl  shader.hlsl
